tests/snapshots/config_error_snapshots__sexpr__extra_close.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"(a b))\")"
---
  × unexpected ')'
   ╭─[<test>:1:1]
 1 │ (a b))
   · ┬    ┬
   · │    ╰── no matching '('
   · ╰── nearest form starts here
   ╰────
  help: remove this ')'
