tests/snapshots/config_error_snapshots__sexpr__extra_close_bare.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\")\")"
---
  × unexpected ')'
   ╭─[<test>:1:1]
 1 │ )
   · ┬
   · ╰── no matching '('
   ╰────
  help: remove this ')'
