tests/snapshots/config_error_snapshots__sexpr__sibling_absorbed.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"(rule foo\\n(other bar)\")"
---
  × unclosed '('
   ╭─[<test>:1:1]
 1 │ (rule foo
   · ┬        ▲
   · │        ╰── insert ')' here
   · ╰── the rule starting here
 2 │ (other bar)
   ╰────
  help: add a closing ')'
