tests/snapshots/config_error_snapshots__sexpr__unclosed_paren_eof.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"(rule foo\")"
---
  × unclosed '('
   ╭─[<test>:1:1]
 1 │ (rule foo
   · ┬
   · ╰── the rule starting here
   ╰────
  help: add a closing ')'
