tests/snapshots/config_error_snapshots__sexpr__unclosed_paren_eof_empty.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"(\")"
---
  × unclosed '('
   ╭─[<test>:1:1]
 1 │ (
   · ┬
   · ╰── starting here
   ╰────
  help: add a closing ')'
