tests/snapshots/config_error_snapshots__sexpr__unexpected_char.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"{rule}\")"
---
  × unexpected character: '{'
   ╭─[<test>:1:1]
 1 │ {rule}
   · ┬
   · ╰── here
   ╰────
