tests/snapshots/config_error_snapshots__sexpr__unterminated_string.snap
---
source: tests/config_error_snapshots.rs
expression: "render_error(\"(rule \\\"hello\")"
---
  × unterminated string
   ╭─[<test>:1:7]
 1 │ (rule "hello
   ·       ───┬──
   ·          ╰── here
   ╰────
